Interested parties for user research

--- a/app/views/_includes/appeal-content/full-appeal-decision-allowed.html
+++ b/app/views/_includes/appeal-content/full-appeal-decision-allowed.html
@@ -12,6 +12,14 @@
 <dl class="govuk-summary-list">
 
   <h3 class="govuk-heading-s">
+    Inspector
+  </h3>
+
+  <p class="govuk-body">
+    C J Agenue BA (Hons) BTP MRTPI
+  </p>
+
+  <h3 class="govuk-heading-s">
     Peliminary matters
   </h3>
 
