--- a/app/views/_includes/appeal-content/full-appeal-details.html
+++ b/app/views/_includes/appeal-content/full-appeal-details.html
@@ -5,15 +5,7 @@
 <dl class="govuk-summary-list">
 
   <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-half">
-      Procedure
-    </dt>
-    <dd class="govuk-summary-list__value">
-      Written representations
-    </dd>
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
+    <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-third">
       Draft statement of common ground
     </dt>
     <dd class="govuk-summary-list__value">
@@ -73,7 +65,7 @@
 <dl class="govuk-summary-list">
 
   <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-half">
+    <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-third">
       Description of development
     </dt>
     <dd class="govuk-summary-list__value govuk-summary-list__value--no-border">
