--- a/app/views/appeal/save-and-return/v5/govuk-start.html
+++ b/app/views/appeal/save-and-return/v5/govuk-start.html
@@ -134,7 +134,7 @@
         If you&rsquo;re requesting a hearing or public inquiry
       </h3>
 
-      <p>You also need to <a href="#0">create a draft statement of common ground</a>. This is a document explaining the parts of your planning application that you believe the local planning department will not disagree with.</p>
+      <p>You also need to <a href="#0">create a draft statement of common ground</a>. This is a document explaining the parts of your planning application that you believe the local planning authority will not disagree with.</p>
 
 
       <h3 class="govuk-heading-s">
