--- a/app/views/interested/comment/v5/appeal-details.html
+++ b/app/views/interested/comment/v5/appeal-details.html
@@ -107,7 +107,7 @@
             Loft conversion of roof to existing dwelling (Certificate of Lawfulness of Proposed Use).
             <p class="govuk-body">
               <a href="https://www.bristol.gov.uk/planning-and-building-regulations" target="_blank">
-                View the application details on the local planning department’s website (opens in new tab)
+                View the application details on the local planning authority’s website (opens in new tab)
               </a>
             </p>
           </dd>
@@ -120,7 +120,7 @@
         {% endif %}
 
           <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-third">
-            Local planning department
+            Local planning authority
           </dt>
           <dd class="govuk-summary-list__value govuk-summary-list__value--no-border">
             Bristol City Council
