--- a/app/views/interested/comment/v5/comments-received-confirmation.html
+++ b/app/views/interested/comment/v5/comments-received-confirmation.html
@@ -45,7 +45,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
     </h2>
 
     <p class="govuk-body">
-      Your comments will be shared with the applicant and local planning department.
+      Your comments will be shared with the applicant and local planning authority.
     </p>
 
     <p class="govuk-body">
@@ -58,7 +58,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 
     <p class="govuk-body">
       From,​<br>
-      Bristol City Council Planning Department<br>
+      Bristol City Council planning authority<br>
     </p>
 
   </div>
