--- a/app/views/interested/comment/v5/guidance.html
+++ b/app/views/interested/comment/v5/guidance.html
@@ -61,7 +61,7 @@
       <ul class="govuk-list govuk-list--bullet">
 
         <li>
-          the 7-digit reference number that can be found on your letter from the local planning department. This can also be found on the local planning department's website
+          the 7-digit reference number that can be found on your letter from the local planning authority. This can also be found on the local planning authority's website
         </li>
 
         <li>
@@ -79,7 +79,7 @@
       </h2>
 
       <p class="govuk-body">
-        Any previous comments that you submitted as part of an application will be considered by the Planning Inspector. The local planning department shares these with the Planning Inspectorate, so there is no need to submit repeat comments.
+        Any previous comments that you submitted as part of an application will be considered by the Planning Inspector. The local planning authority shares these with the Planning Inspectorate, so there is no need to submit repeat comments.
       </p>
 
       <p class="govuk-body">
