--- a/app/views/interested/comment/v5/householder-appeal-first-notice-letter.html
+++ b/app/views/interested/comment/v5/householder-appeal-first-notice-letter.html
@@ -14,7 +14,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 <img src="{{ asset_path }}images/bcc-logo.png" width="150" class="govuk-!-margin-bottom-6" />
 
 <p>
-  Bristol City Council Planning Department, Atlas Buildings<br>
+  Bristol City Council planning authority, Atlas Buildings<br>
   Sedgemore Road, Bristol BS1 6XN
 </p>
 
@@ -114,7 +114,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
     </h2>
 
     <p class="govuk-body">
-      The Planning Inspectorate will look at the evidence from the applicant and the local planning department, conduct a site visit, and make the final decision on the appeal.
+      The Planning Inspectorate will look at the evidence from the applicant and the local planning authority, conduct a site visit, and make the final decision on the appeal.
     </p>
 
     <p class="govuk-body">
@@ -123,7 +123,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 
     <p class="govuk-body">
       Thank you,​<br>
-      Bristol City Council Planning Department<br>
+      Bristol City Council planning authority<br>
     </p>
 
   </div>
