--- a/app/views/interested/comment/v6/check-your-answers.html
+++ b/app/views/interested/comment/v6/check-your-answers.html
@@ -42,7 +42,7 @@
               actions: {
                 items: [
                   {
-                    href: 'final-comments',
+                    href: 'your-name',
                     text: 'Change'
                   }
                 ]
@@ -58,7 +58,7 @@
               actions: {
                 items: [
                   {
-                    href: 'final-comments',
+                    href: 'your-email',
                     text: 'Change'
                   }
                 ]
@@ -74,7 +74,7 @@
               actions: {
                 items: [
                   {
-                    href: 'final-comments',
+                    href: 'add-comments',
                     text: 'Change'
                   }
                 ]
