--- a/app/views/interested/comment/v6/your-name.html
+++ b/app/views/interested/comment/v6/your-name.html
@@ -38,6 +38,10 @@
           </h1>
         </legend>
 
+        <p class="govuk-body">
+          We need your name to link you to your comments, this is helpful if you need to contact us. We do not publish your name.
+        </p>
+
         <!-- <div id="name-hint" class="govuk-hint">
            Write the name as it is written on the enforcement notice
         </div> -->
