--- a/app/views/manage/statement/v1/started-refusal.html
+++ b/app/views/manage/statement/v1/started-refusal.html
@@ -18,7 +18,7 @@
       Planning appeal reference: A/1234567
     </p>
 
-    <p class="govuk-body">Dear [name of local planning department]</p>
+    <p class="govuk-body">Dear [name of local planning authority]</p>
 
     <p class="govuk-body">We've started a full appeal against the refusal of planning application <strong>21/05058/FUL</strong>.</p>
 
