--- a/app/views/_includes/appeal-content/full-appeal-summary.html
+++ b/app/views/_includes/appeal-content/full-appeal-summary.html
@@ -40,7 +40,7 @@
 
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-third">
-      Local planning department
+      Local planning authority
     </dt>
     <dd class="govuk-summary-list__value govuk-summary-list__value--no-border">
       Bristol City Council
@@ -49,63 +49,25 @@
 
   <!-- work out if this is the last table row -->
   {% if data['status'] != "completed" %}
-  <div class="govuk-summary-list__row pins-summary-list__row--last">
+  <div class="govuk-summary-list__row">
   {% else %}
   <div class="govuk-summary-list__row">
   {% endif %}
-  <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-third">
-    Appeal type
-  </dt>
-  <dd class="govuk-summary-list__value govuk-summary-list__value--no-border">
-    Full planning
-  </dd>
-</div>
+    <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-third">
+      Appeal type
+    </dt>
+    <dd class="govuk-summary-list__value govuk-summary-list__value--no-border">
+      Full planning
+    </dd>
+  </div>
 
-  <!-- more summary if the appeal is decided -->
-  {% if data['status'] == "completed" %}
-
-    <div class="govuk-summary-list__row">
-      <dt class="govuk-summary-list__key">
-        Inspector
-      </dt>
-      <dd class="govuk-summary-list__value">
-        <p>
-          C J Agenue BA (Hons) BTP MRTPI
-        </p>
-      </dd>
-    </div>
-
-    <div class="govuk-summary-list__row">
-      <dt class="govuk-summary-list__key">
-        Decision date
-      </dt>
-      <dd class="govuk-summary-list__value">
-        <p>
-          2 February 2022
-        </p>
-      </dd>
-    </div>
-
-    <div class="govuk-summary-list__row govuk-summary-list__row pins-summary-list__row--last">
-      <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-third">
-        Decision
-      </dt>
-      <dd class="govuk-summary-list__value govuk-summary-list__value--no-border">
-        {% if data['decision'] == "allowed" %}
-          Allowed
-        {% elseif data['decision'] == "disallowed" %}
-          Disallowed
-        {% elseif data['decision'] == "split" %}
-          Split decision
-        {% elseif data['decision'] == "invalid" %}
-          Invalid
-        {% else %}
-          Allowed
-        {% endif %}
-
-      </dd>
-    </div>
-
-  {% endif %}
+  <div class="govuk-summary-list__row pins-summary-list__row--last">
+    <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-half">
+      Procedure
+    </dt>
+    <dd class="govuk-summary-list__value">
+      Written representations
+    </dd>
+  </div>
 
 </dl>
