--- a/app/views/interested/comment/v5/appeal-decision.html
+++ b/app/views/interested/comment/v5/appeal-decision.html
@@ -85,7 +85,7 @@ Aubrey{% extends "layout.html" %}
 
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-third">
-            Local planning department
+            Local planning authority
           </dt>
           <dd class="govuk-summary-list__value">
             Bristol City Council
