--- a/app/views/interested/find-appeal/v5/appeal-notice-email-full.html
+++ b/app/views/interested/find-appeal/v5/appeal-notice-email-full.html
@@ -13,7 +13,7 @@
   </p>
   <p>
     <strong>To:</strong> example@email.com<br>
-    <strong>From:</strong> planning@bristolcity.gov.uk
+    <strong>From:</strong> appeals@planninginspectorate.gov.uk
   </p>
   <!-- <p>
     <img src="{{ asset_path }}images/pi-logo.png" width="150"/>
@@ -35,15 +35,15 @@
 </p>
 
 <p class="govuk-body">
+  The decision on the appeal is based on evidence given by Rachel Silver, Bristol City Council and anyone who is affected by this appeal (also known as an ‘interested party’).
+</p>
+
+<p class="govuk-body">
   Planning appeals are decided by The Planning Inspectorate.
 </p>
 
 <p class="govuk-body">
-  The Planning Inspectorate is completely independent of Bristol City Council.
-</p>
-
-<p class="govuk-body">
-  The decision on the appeal is based on evidence given by Rachel Silver, Bristol City Council and anyone who is affected by this appeal (also known as an ‘interested party’).
+  The Planning Inspectorate is independent of Bristol City Council.
 </p>
 
 <h2 class="govuk-heading-m">
@@ -55,34 +55,38 @@
 </p>
 
 <p class="govuk-body">
-  We’ve already sent your comments from the application to the planning inspector. You do not need to send them again.
+  If you made comments on the application, they have been sent to the planning inspector. You do not need to send them again.
 </p>
 
-<p class="govuk-body">
+<!-- <p class="govuk-body">
   You can submit any new comments, relevant to the appeal, by following the link.
-</p>
+</p> -->
 
 <p class="govuk-body">
   <a href="appeal-details?status=open&appeal=1&appealCode=012726" class="govuk-link">
-    https://appeal-planning-decision.service.gov.uk/full-appeal/submit-comments?appeal=012726
+    View and comment on this appeal
   </a>
 </p>
 
 <p class="govuk-body">
-  You must submit your comments by {{ '14' | daysInFuture }}.
+  You must submit your comments by 11:59pm on {{ '14' | daysInFuture }}.
 </p>
 
-<h2 class="govuk-heading-m">
-  Request a visit to your property
+<!-- <h2 class="govuk-heading-m">
+  Site visits
 </h2>
 
 <p class="govuk-body">
-  If the inspector cannot see the appeal site from the road, you can request a visit to your property. If they agree, they’ll visit your property with Rachel Silver and the planning officer from Bristol City Council. They’ll do this on the same day as the appeal site visit.
+  If a visit to the appeal site is needed, you can ask for the inspector to also view the appeal site from your property. This is usually only needed if they cannot see it from the road.
 </p>
 
 <p class="govuk-body">
-  You can request a visit to your property by emailing enquiries@planninginspectorate.gov.uk
+  If they agree, they’ll visit your property with Rachel Silver.
 </p>
+
+<p class="govuk-body">
+  You can request a site visit at your property by emailing us.
+</p> -->
 
 <h2 class="govuk-heading-m">
   What happens next
@@ -93,11 +97,8 @@
 </p>
 
 <p class="govuk-body">
-  Thank you,
-</p>
-
-<p class="govuk-body">
-  Bristol City Council
+  The Planning Inspectorate<br>
+  enquiries@planninginspectorate.gov.uk
 </p>
 
 {% endblock %}
