Add in the Full Planning ownership questions to HAS

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -20,3 +20,19 @@
 .internal .app-border-bottom-big {
 	border-color: govuk-colour("turquoise");
 }
+
+
+
+
+// align text on multi line checkboxes
+.checkboxes-long-text {
+	.govuk-checkboxes__input,
+	.govuk-checkboxes__label::before {
+		top: 50%;
+		transform: translateY(-50%);
+	}
+	.govuk-checkboxes__label::after {
+		top: calc(50% - 3px);
+		transform: translateY(-50%) rotate(-45deg);
+	}
+}
